--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <title>WC Toggle - Web Component</title>
         <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-        <link rel="import" href="src/wc-toggle.html">
+        <link rel="import" href="wc-toggle.html">
     </head>
 
     <body>
