--- a/wc-toggle.html
+++ b/wc-toggle.html
@@ -2,7 +2,7 @@
     <style>
         :host {
             display: inline-flex;
-            padding: 2rem
+            padding: var(--wc-toggle-padding, 1rem);
         }
 
         .input-checkbox {
@@ -20,11 +20,11 @@
             margin: 0 10px;
             vertical-align: middle;
             display: inline-block;
-            height: 2em;
-            width: 4em;
+            height: var(--wc-toggle-bar-height, 1.6em);
+            width: var(--wc-toggle-bar-width, 3.2em);
             background-color: var(--wc-toggle-unchecked-bar-color, #53D76A);
-            border-radius: 2em;
-            border: 1px solid #CCC;
+            border-radius: var(--wc-toggle-bar-border-radius, var(--wc-toggle-bar-height, 1.6em));
+            border: var(--wc-toggle-bar-border, 1px solid #CCC);
             cursor: pointer;
             transition: background-color 0.2s ease-out;
         }
@@ -37,8 +37,8 @@
             height: 100%;
             width: 50%;
             border-radius: 2em;
-            border: 1px solid #999;
-            box-shadow: 0 1px 1px 0px #999;
+            border: var(--wc-toggle-button-border, 1px solid #999);
+            box-shadow: var(--wc-toggle-button-shadow, 0 1px 1px 0px #999);
             top: -1px;
             left: -1px;
             transition: left 0.2s ease-out;
