--- a/wc-toggle.html
+++ b/wc-toggle.html
@@ -13,6 +13,12 @@
         .label-left,
         .label-right {
             cursor: pointer;
+            transition: text-shadow var(--wc-toggle-transition-time, 0.2s);
+        }
+
+        .label-left.selected,
+        .label-right.selected {
+            text-shadow: 0 0 0 currentColor, 0 0 0 currentColor;
         }
 
         .input-checkbox + .button-label {
@@ -26,7 +32,7 @@
             border-radius: var(--wc-toggle-bar-border-radius, var(--wc-toggle-bar-height, 1.6em));
             border: var(--wc-toggle-bar-border, 1px solid #CCC);
             cursor: pointer;
-            transition: background-color 0.2s ease-out;
+            transition: background-color var(--wc-toggle-transition-time, 0.2s) ease-out;
         }
 
         .input-checkbox+.button-label:after {
@@ -41,7 +47,7 @@
             box-shadow: var(--wc-toggle-button-shadow, 0 1px 1px 0px #999);
             top: -1px;
             left: -1px;
-            transition: left 0.2s ease-out;
+            transition: left var(--wc-toggle-transition-time, 0.2s) ease-out;
         }
 
         .input-checkbox:checked+.button-label {
@@ -86,6 +92,8 @@
 
         connectedCallback() {
             this.$_checkbox = this.shadowRoot.querySelector("#wc-toggle-checkbox");
+            this.$_labelLeft = this.shadowRoot.querySelector(".label-left");
+            this.$_labelRight = this.shadowRoot.querySelector(".label-right");
             this._readValues();
             this._setLabels();
 
@@ -121,6 +129,7 @@
 
         set value(newValue) {
            this.setAttribute("value", newValue);
+           this._updateSelectedClass();
         }
 
         get value() {
@@ -149,6 +158,16 @@
                 detail: {value: this.value},
                 bubbles: true    
             }));
+        }
+
+        _updateSelectedClass() {
+            if (this.value === this._valueLeft) {
+                this.$_labelLeft.classList.add("selected");
+                this.$_labelRight.classList.remove("selected");
+            } else if(this.value === this._valueRight) {
+                this.$_labelRight.classList.add("selected");
+                this.$_labelLeft.classList.remove("selected");
+            }
         }
     }
 
